force-app/main/objects/Timesheet_Line__c.object
<CustomObject>
    <description>Time recording in T&amp;E module</description>
    <fields>
        <fullName>ApprovedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ApprovedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N20000001JpaNEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_Hours__c</fullName>
        <label>Approved Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billable1__c</fullName>
        <label>Billable</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Task__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Rate__c</fullName>
        <label>Billing Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPS_Timesheet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CPS Timesheet</label>
        <referenceTo>Timesheet_Line__c</referenceTo>
        <relationshipLabel>Timesheets</relationshipLabel>
        <relationshipName>Timesheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Checked_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checked Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Logged_In_User__c</fullName>
        <description>Used in Report: To Filter Timesheet Records Based on logged-in User</description>
        <formula>IF(Resource__c=$User.Id,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Logged-In User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Invoiced__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <label>Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Hours_Timesheet__c</fullName>
        <formula>IF(OR(ISPICKVAL(Task_Category__c,&quot;Advisory Services&quot;),
ISPICKVAL(Task_Category__c,&quot;Client Support&quot;),
ISPICKVAL(Task_Category__c,&quot;Job Analysis and Competency Design&quot;),
ISPICKVAL(Task_Category__c,&quot;Migration&quot;),
ISPICKVAL(Task_Category__c,&quot;Problem Resolution&quot;),
ISPICKVAL(Task_Category__c,&quot;Product Consulting&quot;),
ISPICKVAL(Task_Category__c,&quot;PS Consulting&quot;),
ISPICKVAL(Task_Category__c,&quot;Re-work&quot;),
ISPICKVAL(Task_Category__c,&quot;Solutions Consulting&quot;),
ISPICKVAL(Task_Category__c,&quot;System Configuration and Implementation&quot;),
ISPICKVAL(Task_Category__c,&quot;Training&quot;),
ISPICKVAL(Task_Category__c,&quot;Travel&quot;)
),Hours__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Hours Timesheet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>SAL</fullName>
                </value>
                <value>
                    <fullName>PSAL</fullName>
                </value>
                <value>
                    <fullName>INT</fullName>
                </value>
                <value>
                    <fullName>CT;PSAL</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The invoice in which the billable amount of this timesheet
			is included.</description>
        <inlineHelpText>The invoice in which the billable amount of this timesheet
			is included.</inlineHelpText>
        <label>Invoice Request</label>
        <referenceTo>Project_Invoice__c</referenceTo>
        <relationshipName>R00N20000001KxbdEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsCPSTimesheet__c</fullName>
        <formula>Project__r.RecordType.DeveloperName   &lt;&gt; &apos;Project&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is CPS Timesheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LPSProject__c</fullName>
        <formula>IF( Project__r.RecordType.Name = &apos;Project&apos;,  HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+Project__c   , Project__r.Name, &apos;_blank&apos;),  HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+Project__r.PS_Project_Number__c,  Project__r.PS_Project_Number__r.Name , &apos;_blank&apos;) 
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LPS Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LPS_Project_Number_Report_Filter__c</fullName>
        <formula>IF( Project__r.RecordType.Name=&apos;Project&apos;,  Project__r.Name ,  Project__r.PS_Project_Number__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LPS Project Number (Report Filter)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optional_Details__c</fullName>
        <label>Optional Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Timesheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Project__r.Project_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Nickname__c</fullName>
        <formula>Project__r.Project_Nick_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Nickname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <formula>Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <formula>Text(Project__r.Project_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>ProjectObject__c</referenceTo>
        <relationshipLabel>Timesheets</relationshipLabel>
        <relationshipName>Timesheets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Resource_Information__c</fullName>
        <formula>TimesheetReportResourceBU__c + &quot;  (&quot; + UserUtilizationFunction__c +&quot;)&quot;</formula>
        <label>Resource BU (Utilisation Function)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N20000001Jpa3EAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted for Approval</fullName>
                    <default>true</default>
                    <label>Submitted for Approval</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Submitted for Processing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task1__c</fullName>
        <label>Task</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Task_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Assessment and Development Consulting (including content design)</fullName>
                </value>
                <value>
                    <fullName>Solutions Consulting</fullName>
                </value>
                <value>
                    <fullName>Job Analysis and Competency Design</fullName>
                </value>
                <value>
                    <fullName>BOS</fullName>
                </value>
                <value>
                    <fullName>Custom report</fullName>
                </value>
                <value>
                    <fullName>RJP</fullName>
                </value>
                <value>
                    <fullName>Data Extract</fullName>
                </value>
                <value>
                    <fullName>S2P</fullName>
                </value>
                <value>
                    <fullName>SJT</fullName>
                </value>
                <value>
                    <fullName>360</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Post Implementation Support</fullName>
                </value>
                <value>
                    <fullName>TA</fullName>
                </value>
                <value>
                    <fullName>Problem Resolution</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Product Management</fullName>
                </value>
                <value>
                    <fullName>Corp and Man Contribution</fullName>
                </value>
                <value>
                    <fullName>Personal development</fullName>
                </value>
                <value>
                    <fullName>Holidays</fullName>
                </value>
                <value>
                    <fullName>Sickness</fullName>
                </value>
                <value>
                    <fullName>Thought Leadership</fullName>
                </value>
                <value>
                    <fullName>Internal meetings</fullName>
                </value>
                <value>
                    <fullName>Billable Travel</fullName>
                </value>
                <value>
                    <fullName>Non-billable Travel</fullName>
                </value>
                <value>
                    <fullName>1:1 delivery</fullName>
                </value>
                <value>
                    <fullName>1:M delivery</fullName>
                </value>
                <value>
                    <fullName>360 Degree Facilitation</fullName>
                </value>
                <value>
                    <fullName>360 Design</fullName>
                </value>
                <value>
                    <fullName>360 system support</fullName>
                </value>
                <value>
                    <fullName>Account planning and review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Category__c</fullName>
        <label>Task Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1:1 Assessment</fullName>
                </value>
                <value>
                    <fullName>1:1 Assessment Feedback Session</fullName>
                </value>
                <value>
                    <fullName>1:1 Developmental Feedback Session</fullName>
                </value>
                <value>
                    <fullName>1:1 Development Assessment</fullName>
                </value>
                <value>
                    <fullName>360 System</fullName>
                </value>
                <value>
                    <fullName>Account Specific</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Advisory Services</fullName>
                </value>
                <value>
                    <fullName>Aspiring Minds</fullName>
                </value>
                <value>
                    <fullName>Assessment Centre</fullName>
                </value>
                <value>
                    <fullName>Business Outcome Study / Validation Study</fullName>
                </value>
                <value>
                    <fullName>Client and End-User Support and Consulting</fullName>
                </value>
                <value>
                    <fullName>Client Custom Assessment</fullName>
                </value>
                <value>
                    <fullName>Client Support</fullName>
                </value>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Competency Design</fullName>
                </value>
                <value>
                    <fullName>Competency Mapping</fullName>
                </value>
                <value>
                    <fullName>Coordination of Intra SHL Purchase of Services</fullName>
                </value>
                <value>
                    <fullName>Custom Norm</fullName>
                </value>
                <value>
                    <fullName>Custom Report</fullName>
                </value>
                <value>
                    <fullName>Custom Report - Configured</fullName>
                </value>
                <value>
                    <fullName>Dashboards</fullName>
                </value>
                <value>
                    <fullName>Development Centre</fullName>
                </value>
                <value>
                    <fullName>Development Coach</fullName>
                </value>
                <value>
                    <fullName>Digital Readiness</fullName>
                </value>
                <value>
                    <fullName>Enablement</fullName>
                </value>
                <value>
                    <fullName>Engagement</fullName>
                </value>
                <value>
                    <fullName>Enterprise Leadership</fullName>
                </value>
                <value>
                    <fullName>Generic</fullName>
                </value>
                <value>
                    <fullName>Graduate Solution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Task</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Time_Category__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1:1</fullName>
                </value>
                <value>
                    <fullName>Account / Opportunity Specific</fullName>
                </value>
                <value>
                    <fullName>Account Review and Preparation &amp; Facilitation</fullName>
                </value>
                <value>
                    <fullName>Additional Consultancy Coordination</fullName>
                </value>
                <value>
                    <fullName>Ad-hoc Advisory Support</fullName>
                </value>
                <value>
                    <fullName>Admin, Management and Meetings</fullName>
                </value>
                <value>
                    <fullName>Admin for projects – e.g. spec doc creation, JIRA ticket creation, issue management</fullName>
                    <label>Admin for projects - e.g. spec doc creation, JIRA ticket creation, issue management</label>
                </value>
                <value>
                    <fullName>Advisory</fullName>
                </value>
                <value>
                    <fullName>Advisory Program Initiation</fullName>
                </value>
                <value>
                    <fullName>Analysis</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Application Analytics Consulting</fullName>
                </value>
                <value>
                    <fullName>Assessment / Development Centre</fullName>
                </value>
                <value>
                    <fullName>Assessment and Development Delivery</fullName>
                </value>
                <value>
                    <fullName>Assessment Solution Updates</fullName>
                </value>
                <value>
                    <fullName>Associate Contracting</fullName>
                </value>
                <value>
                    <fullName>Associate Payment</fullName>
                </value>
                <value>
                    <fullName>Attending Company Training</fullName>
                </value>
                <value>
                    <fullName>Automation</fullName>
                </value>
                <value>
                    <fullName>BOS/Validation</fullName>
                </value>
                <value>
                    <fullName>Build</fullName>
                </value>
                <value>
                    <fullName>Client Changes</fullName>
                </value>
                <value>
                    <fullName>Client Support</fullName>
                </value>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Company Holiday</fullName>
                </value>
                <value>
                    <fullName>Compassionate Leave</fullName>
                </value>
                <value>
                    <fullName>Competency Framework</fullName>
                </value>
                <value>
                    <fullName>Configuration and Implementation</fullName>
                </value>
                <value>
                    <fullName>Configuration Forms</fullName>
                </value>
                <value>
                    <fullName>Consulting Travel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Amount__c</fullName>
        <formula>if (ISNULL(Billing_Rate__c) ,0,(Hours__c /8)* Billing_Rate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Time_Category__c</fullName>
        <label>Time Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal Organisation</fullName>
                </value>
                <value>
                    <fullName>Investments</fullName>
                </value>
                <value>
                    <fullName>Pre-Sales</fullName>
                </value>
                <value>
                    <fullName>Delivery - Outsourced Assessments</fullName>
                </value>
                <value>
                    <fullName>Delivery – Solution, Product</fullName>
                    <label>Delivery - Solution, Product</label>
                </value>
                <value>
                    <fullName>Delivery - Other</fullName>
                </value>
                <value>
                    <fullName>Cases - CSIT</fullName>
                    <isActive>false</isActive>
                    <label>Cases - CSIT</label>
                </value>
                <value>
                    <fullName>Courses - CSIT</fullName>
                    <isActive>false</isActive>
                    <label>Courses - CSIT</label>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                    <isActive>false</isActive>
                    <label>Delivery</label>
                </value>
                <value>
                    <fullName>Delivery - Product Consulting</fullName>
                    <isActive>false</isActive>
                    <label>Delivery - Product Consulting</label>
                </value>
                <value>
                    <fullName>Delivery - Solutions Consulting</fullName>
                    <isActive>false</isActive>
                    <label>Delivery - Solutions Consulting</label>
                </value>
                <value>
                    <fullName>Delivery - Training</fullName>
                    <isActive>false</isActive>
                    <label>Delivery - Training</label>
                </value>
                <value>
                    <fullName>Email - CSIT</fullName>
                    <isActive>false</isActive>
                    <label>Email - CSIT</label>
                </value>
                <value>
                    <fullName>Project Resourcing and Support</fullName>
                    <isActive>false</isActive>
                    <label>Project Resourcing and Support</label>
                </value>
                <value>
                    <fullName>Support Materials - CSIT</fullName>
                    <isActive>false</isActive>
                    <label>Support Materials - CSIT</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Cost__c</fullName>
        <label>Time Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TimesheeetReportUserBU__c</fullName>
        <formula>CASE( $User.Company_BU__c ,
&quot;Abu Dhabi - AD1&quot;,&quot;Abu Dhabi - AD1&quot;, 
&quot;AP Region - P10&quot;, &quot;AP Region - P10&quot;, 
&quot;Australia - AU1&quot;,&quot;Australia - AU1&quot;, 
&quot;Belgium - BE1&quot;,&quot;Belgium - BE1&quot;, 
&quot;Belgium SPS - BE5&quot;,&quot;Belgium SPS - BE5&quot;, 
&quot;Canada - CA1&quot;,&quot;Canada - CA1&quot;, 
&quot;Denmark - DK1&quot;,&quot;Denmark - DK1&quot;, 
&quot;Denmark SPS - DK5&quot;,&quot;Denmark SPS - DK5&quot;, 
&quot;EU Region - E50&quot;,&quot;EU Region - E50&quot;, 
&quot;Finland - FI1&quot;,&quot;Finland - FI1&quot;, 
&quot;France - FR1&quot;,&quot;France - FR1&quot;, 
&quot;France SPS - FR5&quot;,&quot;France SPS - FR5&quot;, 
&quot;Germany - DE1&quot;,&quot;Germany - DE1&quot;, 
&quot;Germany SPS - DE5&quot;,&quot;Germany SPS - DE5&quot;, 
&quot;Hong Kong - HK1&quot;,&quot;Hong Kong - HK1&quot;, 
&quot;India - IN1&quot;,&quot;India - IN1&quot;,&quot;Ireland - IE1&quot;, 
&quot;Ireland - IE1&quot;,&quot;Italy - IT1&quot;,&quot;Italy - IT1&quot;, 
&quot;Netherlands - NL1&quot;,&quot;Netherlands - NL1&quot;, 
&quot;Netherlands SPS - NL5&quot;,&quot;Netherlands SPS - NL5&quot;, 
&quot;New Zealand - NZ1&quot;,&quot;New Zealand - NZ1&quot;, 
&quot;Norway - NO1&quot;,&quot;Norway - NO1&quot;, 
&quot;Poland - PL1&quot;,&quot;Poland - PL1&quot;, 
&quot;Saudi Arabia - SA5&quot;,&quot;Saudi Arabia - SA5&quot;,
&quot;Singapore - SG1&quot;,&quot;Singapore - SG1&quot;, 
&quot;South Africa - ZA1&quot;,&quot;South Africa - ZA1&quot;, 
&quot;Spain - ES1&quot;,&quot;Spain - ES1&quot;, 
&quot;Sweden - SE1&quot;,&quot;Sweden - SE1&quot;, 
&quot;Sweden SPS - SE5&quot;,&quot;Sweden SPS - SE5&quot;, 
&quot;Switzerland - CH1&quot;,&quot;Switzerland - CH1&quot;, 
&quot;UK SPS - UK5&quot;,&quot;UK SPS - UK5&quot;, 
&quot;UK - UK1&quot;,&quot;UK - UK1&quot;, 
&quot;US - US1&quot;,&quot;US - US1&quot;, 
&quot;none&quot;)</formula>
        <label>User BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimesheetReportField__c</fullName>
        <formula>IF(Resource__c = $User.Id ,1, 0)</formula>
        <label>TimesheetReportField</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimesheetReportResourceBU__c</fullName>
        <formula>CASE( Resource__r.Company_BU__c  ,
&quot;Abu Dhabi - AD1&quot;,&quot;Abu Dhabi - AD1&quot;,
&quot;AP Region - P10&quot;, &quot;AP Region - P10&quot;,
&quot;Australia - AU1&quot;,&quot;Australia - AU1&quot;,
&quot;Belgium - BE1&quot;,&quot;Belgium - BE1&quot;,
&quot;Belgium SPS - BE5&quot;,&quot;Belgium SPS - BE5&quot;,
&quot;Canada - CA1&quot;,&quot;Canada - CA1&quot;,
&quot;China - CN1&quot;,&quot;China - CN1&quot;,
&quot;Denmark - DK1&quot;,&quot;Denmark - DK1&quot;,
&quot;Denmark SPS - DK5&quot;,&quot;Denmark SPS - DK5&quot;,
&quot;EU Region - E50&quot;,&quot;EU Region - E50&quot;,
&quot;Finland - FI1&quot;,&quot;Finland - FI1&quot;,
&quot;France - FR1&quot;,&quot;France - FR1&quot;,
&quot;France SPS - FR5&quot;,&quot;France SPS - FR5&quot;,
&quot;Germany - DE1&quot;,&quot;Germany - DE1&quot;,
&quot;Germany SPS - DE5&quot;,&quot;Germany SPS - DE5&quot;,
&quot;Hong Kong - HK1&quot;,&quot;Hong Kong - HK1&quot;,
&quot;India - IN1&quot;,&quot;India - IN1&quot;,&quot;Ireland - IE1&quot;,
&quot;Ireland - IE1&quot;,&quot;Italy - IT1&quot;,&quot;Italy - IT1&quot;,
&quot;Netherlands - NL1&quot;,&quot;Netherlands - NL1&quot;,
&quot;Netherlands SPS - NL5&quot;,&quot;Netherlands SPS - NL5&quot;,
&quot;New Zealand - NZ1&quot;,&quot;New Zealand - NZ1&quot;,
&quot;Norway - NO1&quot;,&quot;Norway - NO1&quot;,
&quot;Poland - PL1&quot;,&quot;Poland - PL1&quot;,
&quot;Saudi Arabia - SA5&quot;,&quot;Saudi Arabia - SA5&quot;,
&quot;Singapore - SG1&quot;,&quot;Singapore - SG1&quot;,
&quot;South Africa - ZA1&quot;,&quot;South Africa - ZA1&quot;,
&quot;Spain - ES1&quot;,&quot;Spain - ES1&quot;,
&quot;Sweden - SE1&quot;,&quot;Sweden - SE1&quot;,
&quot;Sweden SPS - SE5&quot;,&quot;Sweden SPS - SE5&quot;,
&quot;Switzerland - CH1&quot;,&quot;Switzerland - CH1&quot;,
&quot;UK SPS - UK5&quot;,&quot;UK SPS - UK5&quot;,
&quot;UK - UK1&quot;,&quot;UK - UK1&quot;,
&quot;US - US1&quot;,&quot;US - US1&quot;,
&quot;US - US5&quot;,&quot;US - US5&quot;,
&quot;None&quot;)</formula>
        <label>Resource BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timesheet_From_CPS_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Timesheet From CPS Project (Legacy)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserUtilizationFunction__c</fullName>
        <formula>CASE( Resource__r.Utilisation_Function__c ,&quot;Admin&quot;,&quot;Admin&quot;,&quot;PS&quot;,&quot;PS&quot;,&quot;Sales&quot;,&quot;Sales&quot;,&quot;SPS&quot;,&quot;SPS&quot;,&quot;TS&quot;,&quot;TS&quot;,&quot;None&quot;)</formula>
        <label>UserUtilizationFunction</label>
        <type>Text</type>
    </fields>
    <label>Timesheet</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Timesheets</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Time_Category__c</columns>
        <columns>Task_Category__c</columns>
        <columns>Task__c</columns>
        <columns>Resource__c</columns>
        <columns>Date_Invoiced__c</columns>
        <columns>Hours__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_Logged_In_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Date_Invoiced__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>My Timesheets</label>
    </listViews>
    <nameField>
        <displayFormat>TSL{000000}</displayFormat>
        <label>Timesheet Line Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Restrict_TimeLogs_on_CompletedOldProject</fullName>
        <active>true</active>
        <description>This rule restricts logging timesheets on 6 months old cancelled or closed projects.</description>
        <errorConditionFormula>AND(
OR(
AND(
NOT(ISNEW()),
ISCHANGED(Hours__c)),                      
ISNEW()),  
NOT(ISBLANK(Project__r.Project_Closed_Date__c)),
OR(ISPICKVAL(Project__r.Project_Status__c, &quot;Closed&quot;),
ISPICKVAL(Project__r.Project_Status__c, &quot;Cancelled&quot;)),
ADDMONTHS(Project__r.Project_Closed_Date__c, 6) &lt; TODAY()
)</errorConditionFormula>
        <errorMessage>You cannot log time to a project if the status was set to Closed / Cancelled more than 6 months ago.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Timesheet_Function_Values_Validate</fullName>
        <active>false</active>
        <description>if task category is not filtered on the basis of newly added values on function field, display message &apos;this record can not be saved as the function value has been discontinued.&apos;</description>
        <errorConditionFormula>IF( Text(Function__c)  &lt;&gt;  Project__r.Function_Timesheet__c , true,false)</errorConditionFormula>
        <errorMessage>The functional area selected for this timesheet row has been discontinued.So, kindly create a new timesheet row for entering time against this project.</errorMessage>
    </validationRules>
</CustomObject>